# AutomaticRelaySwitch_According_To_AzanTiming

Azan_lookupGenerator/: AzanGenerator.spec  main.py  prayer_times_2025_20250101-20251231_KARACHI.csv  preview_with_adhanpy.py  span_params_cli.py  span_params_with_adhanpy.py  span_params_with_adhanpy_csv.py  span_params_with_adhanpy_csv_bin.py
RelaySwitching/: CMakeLists.txt  prj.conf
RelaySwitching/boards/: nrf52832.overlay
RelaySwitching/dts/bindings/: zephyr,rtcmcp7940.yaml  zephyr,ssd1306.yaml
RelaySwitching/modules/: CMakeLists.txt  Kconfig
RelaySwitching/modules/RTCmcp7940/: CMakeLists.txt  Kconfig  RTCmcp7940.c  RTCmcp7940.h
RelaySwitching/modules/ssd1306/: CMakeLists.txt  kconfig  ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.h
RelaySwitching/src/: main.c  pray2_reader.h  pray2_tests.c  sd_pray2_io.c  sd_pray2_io.h  sys_flash.c  sys_flash.h  xmodem.c  xmodem.h
